# trial-by-doc

./: .env.example  .gitignore  ADD_A_BENCHMARK.md  ADD_A_MODEL.md  CLAUDE.md  HANDOVER.md  LICENSE  README.md  deck-abc-extracts.md  deck-frontier-comparison.md  pyproject.toml  scripts_batched_throughput.py  scripts_finalize_scoring.sh
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
benchmarks/_scorers/olmocr_bench/: Dockerfile  README.md  score.py
benchmarks/_scorers/omnidocbench/: README.md  requirements.txt  score.py
benchmarks/custom/merged_forms/: VALIDATION.md
configs/: benchmarks.yaml  matrix.yaml  models.yaml
docker/: Dockerfile.cpu  Dockerfile.gpu  compose.yaml
docs/: REFERENCE.md  leaderboard.md
docs/superpowers/plans/: 2026-07-08-tier-b-split.md  2026-07-09-dashboard-ui-polish.md
docs/superpowers/specs/: 2026-07-08-tier-b-split-design.md  2026-07-09-dashboard-ui-design.md  2026-07-09-dashboard-ui-polish-design.md  2026-07-09-reader-upgrade-design.md  2026-07-09-roster-expansion-design.md  2026-07-09-scanned-robustness-design.md  2026-07-10-readme-density-fix-design.md  2026-07-10-readme-restructure-design.md
findings/: LEARNINGS-AND-ROADMAP.md  M1-walking-skeleton.md  M2-gauntlet.md  a4-expanded-roster.md  azure-foundry-catalog.md  b2-gpt5mini-rescore.md  candidate-models.md  got2-table-zero.md  granite-mergedforms-tierC-NA.md  omnidocbench-notes.md  partb-reader-ladder.md  partb-reader-upgrade-smoke.md  partd-scanned-robustness.md  statistical-significance.md  tierd-scanned-build.md  tierd-scanned-robustness.md  v1-interim-analysis.md  ws1-cpu-engines.md
results/runs/all-models-smoke/: manifest.json
results/runs/gate1/: manifest.json  scoreboard.csv  status.json  summary.json
results/runs/run_20260717_095004/: manifest.json  scoreboard.csv  status.json  summary.json
results/runs/run_20260717_095004-b2-gpt5mini/: manifest.json  scoreboard.csv  status.json  summary.json
results/runs/smoke-frontier-20260722/: manifest.json
results/runs/smoke-frontier-20260722b/: manifest.json
results/runs/tierb-smoke/: manifest.json  scoreboard.csv  status.json  summary.json
results/runs/tierc-floor/: manifest.json  status.json  summary.json
results/runs/tierc-floor-15/: manifest.json  scoreboard.csv  status.json  summary.json
results/runs/v1-b2-gpt5mini/: manifest.json  scoreboard.csv  status.json  summary.json
results/runs/v1-baseline/: manifest.json  scoreboard.csv  status.json  summary.json
scripts/: README.md  device_perf.py  run_v1.sh
src/tbdoc/: __init__.py  cli.py
src/tbdoc/benches/: degrade.py
src/tbdoc/benches/custom/: merged_forms.py
src/tbdoc/benches/official/: olmocr_bench.py  omnidocbench.py  realdoc_qa.py  realdoc_qa_scanned.py
src/tbdoc/core/: bench_adapter.py  checkpoint.py  cuda_env.py  hardware.py  manifest.py  model_adapter.py  preflight.py  ratelimit.py  registry.py  secrets.py  structured_doc.py  telemetry.py
src/tbdoc/instruments/: boundary_judge.py  extractor.py  reader.py  vllm_extractor.py
src/tbdoc/models/api/: _vision_chat.py  anthropic_vision.py  gemini_vision.py  mistral_ocr.py  openai_vision.py  openrouter_vision.py
src/tbdoc/models/local/: _transformers_base.py  _vllm_base.py  baselines.py  deepseek_ocr.py  doctr.py  dots_ocr.py  easyocr_engine.py  florence2.py  gemma4.py  got2.py  granite_docling.py  kosmos25.py  lightonocr.py  olmocr2.py  paddleocr_vl.py  phi4mm.py  qwen25vl.py  rapidocr.py  tesseract.py
src/tbdoc/models/template/: my_model.py
src/tbdoc/report/: cost_tables.py  leaderboard.py  scoreboard.py  stats.py
src/tbdoc/runner/: infer.py  matrix.py  score.py  validate.py
src/tbdoc/scoring/: container_scorer.py  native.py  scorers.py  venv_scorer.py
src/tbdoc/ui/: __init__.py  app.py  data.py  gold.py  runs.py
src/tbdoc/ui/static/: ac-tokens.css  index.html
tests/: conftest.py  test_cli_reader_selection.py  test_core.py  test_cost_estimate.py  test_cost_tables.py  test_degrade.py  test_field_value_presence.py  test_hardening.py  test_leaderboard_drift.py  test_matrix.py  test_native_metrics.py  test_openrouter_vision.py  test_preflight.py  test_reader_instrument.py  test_readme_drift.py  test_realdoc_eval_split.py  test_realdoc_qa_scanned.py  test_scoreboard_cost.py  test_scoreboard_render_derived.py  test_scoreboard_tier_b.py  test_stats.py  test_summary_fallback.py  test_tier_b_integration.py  test_ui_routes.py  test_ui_routes_synthetic.py
