[project]
name = "tbdoc"
version = "0.1.0"
description = "trial-by-doc — an OCR / document-intelligence model gauntlet: wire in any model, run the benchmarks, get a deterministic scoreboard."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6",
    "pillow>=10",
    "click>=8.1",
    "huggingface-hub>=0.30",
    "python-dotenv>=1",
    "pymupdf>=1.24",
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
# Local open-weights inference (GPU). Pins verified on the reference host (see CLAUDE.md).
local = [
    "torch>=2.11",
    "vllm>=0.22,<0.23",   # 0.22.1 verified on RTX 5090 sm_120 (ocparse S8); bump only after re-verification
    "transformers>=5.11,<5.12",  # 5.11 verified (5.13 breaks dots.ocr remote-code registration)
    "accelerate",
    "docling-core",
    "pypdfium2",
]
# API-backed models — each provider SDK optional; adapters import lazily.
api = [
    "anthropic",
    "openai",
    "mistralai",
    "google-genai",
    "boto3",
    "azure-ai-documentintelligence",
    "google-cloud-documentai",
]
dev = ["pytest>=8", "pytest-timeout", "ruff"]
all = ["tbdoc[local,api,dev]"]

[project.scripts]
gauntlet = "tbdoc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tbdoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
