[project]
name = "tbdoc"
version = "0.1.0"
description = "trial-by-doc — an OCR / document-intelligence model gauntlet: wire in any model, run the benchmarks, get a deterministic scoreboard."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6",
    "pillow>=10",
    "click>=8.1",
    "huggingface-hub>=0.30",
    "python-dotenv>=1",
    "pymupdf>=1.24",
    "pytesseract>=0.3.13",
    "rapidocr-onnxruntime>=1.4.4",
    "python-doctr>=1.0.1",
    "easyocr>=1.7.2",
]

[project.optional-dependencies]
# Local open-weights inference (GPU). Pins verified on the reference host (see CLAUDE.md).
local = [
    "torch>=2.11",
    "vllm>=0.22,<0.23",   # 0.22.1 verified on RTX 5090 sm_120 (ocparse S8); bump only after re-verification
    "transformers>=5.11,<5.12",  # 5.11 verified (5.13 breaks dots.ocr remote-code registration)
    "accelerate",
    "docling-core",
    "pypdfium2",
    "peft>=0.19.1",  # Phi-4-multimodal-instruct's remote code loads its baked-in vision LoRA via peft
    "backoff>=2.2.1",  # imported at module load by Phi-4-multimodal-instruct's speech_conformer_encoder remote code
    "timm>=1.0.27",  # Florence-2-base's remote code (DaViT vision tower) imports timm.layers directly (Florence-2 currently BLOCKED on transformers 5.11, but kept for revival)
]
# API-backed models — each provider SDK optional; adapters import lazily.
api = [
    "anthropic",
    "openai",
    "mistralai",
    "google-genai",
    "boto3",
    "azure-ai-documentintelligence",
    "google-cloud-documentai",
]
# Local read-only results dashboard (`gauntlet ui`, C3a) — no GPU/model deps.
ui = ["fastapi>=0.110", "uvicorn>=0.30"]
dev = ["pytest>=8", "pytest-timeout", "ruff", "httpx"]
all = ["tbdoc[local,api,dev,ui]"]

[project.scripts]
gauntlet = "tbdoc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tbdoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300  # pytest-timeout: no single test may hang the suite (subprocess scorers etc.)

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
